Fixing svg blurriness in Firefox

--- a/packages/clay/src/scss/lexicon-base/_icons.scss
+++ b/packages/clay/src/scss/lexicon-base/_icons.scss
@@ -2,6 +2,7 @@
 	display: inline-block;
 	fill: currentColor;
 	height: $lexicon-icon-size;
+	transform: translateZ(0);
 	vertical-align: middle;
 	width: $lexicon-icon-size;
 }
